--- a/tutorials/l_master.ipynb
+++ b/tutorials/l_master.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "15121bef",
+   "id": "13320e4f",
    "metadata": {},
    "source": [
     "# Custom Time Evolution\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "81809042",
+   "id": "84d52911",
    "metadata": {},
    "source": [
     "*Note*: Please consult the tutorial on potentials first."
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df066e3a",
+   "id": "a907956a",
    "metadata": {},
    "source": [
     "*Note*: While a bit more complicated, this tutorial can help you make your simulations not only more versatile, but also increase their efficiency."
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a313a30c",
+   "id": "2f87356e",
    "metadata": {},
    "source": [
     "## Hamiltonian"
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "76c6b0d0",
+   "id": "4e5820b1",
    "metadata": {},
    "source": [
     "When calling the integration for the master equation, you can give an optional argument, `hamiltonian`. As already discussed, this argument represents a Hamiltonian as a dictionary of functions."
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c4d2dbef",
+   "id": "a69d676a",
    "metadata": {},
    "source": [
     "Up to now, we  wanted to use custom potentials, so we  added them to the dictionary. Let's look more closely at what is going on by considering a flake under plane wave illumination."
@@ -53,13 +53,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "8f9128ee",
+   "id": "2ddc4a21",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-28T18:53:53.369859Z",
-     "iopub.status.busy": "2025-01-28T18:53:53.369338Z",
-     "iopub.status.idle": "2025-01-28T18:53:57.340805Z",
-     "shell.execute_reply": "2025-01-28T18:53:57.340215Z"
+     "iopub.execute_input": "2025-01-29T10:18:49.889173Z",
+     "iopub.status.busy": "2025-01-29T10:18:49.888952Z",
+     "iopub.status.idle": "2025-01-29T10:18:53.625912Z",
+     "shell.execute_reply": "2025-01-29T10:18:53.625281Z"
     }
    },
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77dba46a",
+   "id": "b4c8c56b",
    "metadata": {},
    "source": [
     "As discussed, the default Hamiltonian  has three terms:"
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "71803768",
+   "id": "4e716893",
    "metadata": {},
    "source": [
     "1. a bare hamiltonian.\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c8e1dfcb",
+   "id": "84096963",
    "metadata": {},
    "source": [
     "Each of these terms is represented by a function. Every function accepts the following three arguments:"
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1586a8e7",
+   "id": "2f9625a3",
    "metadata": {},
    "source": [
     "1. time\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "462cda7f",
+   "id": "40482641",
    "metadata": {},
    "source": [
     "Every function maps these arguments to a complex matrix. Before running a simulation, the functions in the dictionary get turned into a list `func_list`. "
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a4db9e69",
+   "id": "e579ef3d",
    "metadata": {},
    "source": [
     "The matrix representation of the Hamiltonian is then given by applying and adding these functions, like so `H[time] = sum( f(times[time], density_matrix[time], args) for f in func_list )`."
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca74aa30",
+   "id": "07f82b41",
    "metadata": {},
    "source": [
     "## Argument Objects"
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2f6c7601",
+   "id": "83a37f78",
    "metadata": {},
    "source": [
     "The `args` object is a named tuple (like a struct in the C programming language) and we can inspect its contents by looking at its fields "
@@ -150,13 +150,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "043cd4b4",
+   "id": "9b5efb29",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-28T18:53:57.343362Z",
-     "iopub.status.busy": "2025-01-28T18:53:57.342860Z",
-     "iopub.status.idle": "2025-01-28T18:53:59.424434Z",
-     "shell.execute_reply": "2025-01-28T18:53:59.423884Z"
+     "iopub.execute_input": "2025-01-29T10:18:53.628321Z",
+     "iopub.status.busy": "2025-01-29T10:18:53.627830Z",
+     "iopub.status.idle": "2025-01-29T10:18:55.553978Z",
+     "shell.execute_reply": "2025-01-29T10:18:55.553380Z"
     }
    },
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "165b42ee",
+   "id": "b843c164",
    "metadata": {},
    "source": [
     "We can access individual entries"
@@ -184,13 +184,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "4b0b1a8c",
+   "id": "50ce66ee",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-28T18:53:59.426393Z",
-     "iopub.status.busy": "2025-01-28T18:53:59.426146Z",
-     "iopub.status.idle": "2025-01-28T18:53:59.429534Z",
-     "shell.execute_reply": "2025-01-28T18:53:59.428952Z"
+     "iopub.execute_input": "2025-01-29T10:18:55.555853Z",
+     "iopub.status.busy": "2025-01-29T10:18:55.555664Z",
+     "iopub.status.idle": "2025-01-29T10:18:55.558947Z",
+     "shell.execute_reply": "2025-01-29T10:18:55.558331Z"
     }
    },
    "outputs": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6b0de4e6",
+   "id": "aa723b2a",
    "metadata": {},
    "source": [
     "The `args` object is a lower-level representation of the OrbitalList object: a collection of numbers and arrays that represent the structure."
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8652cc0e",
+   "id": "7826fec8",
    "metadata": {},
    "source": [
     "The evolution is determined by the Hamiltonian. It is given by an addition of functions. Each of these functions depends on time, the density matrix and the simulated structure. So, a single function representing a term in the Hamiltonian has the following signature `term: time, density_matrix, args -> matrix`."
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d0152950",
+   "id": "bd743ae4",
    "metadata": {},
    "source": [
     "## Computing Terms"
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "743d6bbc",
+   "id": "09699604",
    "metadata": {},
    "source": [
     "Individual terms of the default Hamiltonian can be inspected and since these are functions, applied to arguments. First, consider the bare Hamiltonian"
@@ -241,13 +241,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "a4f386a8",
+   "id": "40a80f42",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-28T18:53:59.431426Z",
-     "iopub.status.busy": "2025-01-28T18:53:59.431068Z",
-     "iopub.status.idle": "2025-01-28T18:53:59.477916Z",
-     "shell.execute_reply": "2025-01-28T18:53:59.477397Z"
+     "iopub.execute_input": "2025-01-29T10:18:55.560725Z",
+     "iopub.status.busy": "2025-01-29T10:18:55.560552Z",
+     "iopub.status.idle": "2025-01-29T10:18:55.606083Z",
+     "shell.execute_reply": "2025-01-29T10:18:55.605459Z"
     }
    },
    "outputs": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "121efcc1",
+   "id": "74566361",
    "metadata": {},
    "source": [
     "The function returns the bare Hamiltonian, independent of the time and density matrix. Let's compute the Coulomb potential at the initial time"
@@ -280,13 +280,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "d691524c",
+   "id": "887c8edd",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-28T18:53:59.479726Z",
-     "iopub.status.busy": "2025-01-28T18:53:59.479533Z",
-     "iopub.status.idle": "2025-01-28T18:53:59.549119Z",
-     "shell.execute_reply": "2025-01-28T18:53:59.548591Z"
+     "iopub.execute_input": "2025-01-29T10:18:55.607948Z",
+     "iopub.status.busy": "2025-01-29T10:18:55.607766Z",
+     "iopub.status.idle": "2025-01-29T10:18:55.682093Z",
+     "shell.execute_reply": "2025-01-29T10:18:55.681603Z"
     }
    },
    "outputs": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c8e8683",
+   "id": "e50df21f",
    "metadata": {},
    "source": [
     "At the start of the simulation, there is no induced Coulomb potential (all entries in the matrix are zero), because the system is in its ground state."
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b588628",
+   "id": "17a107c9",
    "metadata": {},
    "source": [
     "Last, there is the external potential. Since no transition dipole moments are considered, it will be entirely diagonal in site basis"
@@ -326,13 +326,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "9e10258f",
+   "id": "957ebd92",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-28T18:53:59.551211Z",
-     "iopub.status.busy": "2025-01-28T18:53:59.550835Z",
-     "iopub.status.idle": "2025-01-28T18:53:59.583447Z",
-     "shell.execute_reply": "2025-01-28T18:53:59.582908Z"
+     "iopub.execute_input": "2025-01-29T10:18:55.684042Z",
+     "iopub.status.busy": "2025-01-29T10:18:55.683690Z",
+     "iopub.status.idle": "2025-01-29T10:18:55.712958Z",
+     "shell.execute_reply": "2025-01-29T10:18:55.712465Z"
     }
    },
    "outputs": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a6bcb1b",
+   "id": "a2e4e061",
    "metadata": {},
    "source": [
     "## Modelling Terms"
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e81e758c",
+   "id": "5e4ad99f",
    "metadata": {},
    "source": [
     "To include arbitrary terms in the time evolution, we define a function that"
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e3ba964d",
+   "id": "b75551e7",
    "metadata": {},
    "source": [
     "1. Accepts `time, density_matrix, args`\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d3304ebe",
+   "id": "396f1739",
    "metadata": {},
    "source": [
     "Then, we insert it in the dictionary, potentially overwriting a default key."
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4571c7a0",
+   "id": "98eaaa14",
    "metadata": {},
    "source": [
     "Let's illustrate this at the example of a custom scalar potential. We want to replace the dipole-gauge coupling $\\vec{E} \\vec{P}$ with a scalar potential representing a plane-wave pulse. Let's define this potential first"
@@ -398,13 +398,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "e9ddc010",
+   "id": "e99755a8",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-28T18:53:59.585331Z",
-     "iopub.status.busy": "2025-01-28T18:53:59.585119Z",
-     "iopub.status.idle": "2025-01-28T18:53:59.589229Z",
-     "shell.execute_reply": "2025-01-28T18:53:59.588644Z"
+     "iopub.execute_input": "2025-01-29T10:18:55.714845Z",
+     "iopub.status.busy": "2025-01-29T10:18:55.714668Z",
+     "iopub.status.idle": "2025-01-29T10:18:55.719180Z",
+     "shell.execute_reply": "2025-01-29T10:18:55.718512Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3bb7e3d6",
+   "id": "1e3ba97e",
    "metadata": {},
    "source": [
     "Now, we replace the default potential with our custom term,  as we did before in the case of the pulsed dipole."
@@ -432,13 +432,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "82e7b43a",
+   "id": "c2134101",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-28T18:53:59.591091Z",
-     "iopub.status.busy": "2025-01-28T18:53:59.590724Z",
-     "iopub.status.idle": "2025-01-28T18:53:59.593741Z",
-     "shell.execute_reply": "2025-01-28T18:53:59.593241Z"
+     "iopub.execute_input": "2025-01-29T10:18:55.720902Z",
+     "iopub.status.busy": "2025-01-29T10:18:55.720580Z",
+     "iopub.status.idle": "2025-01-29T10:18:55.723649Z",
+     "shell.execute_reply": "2025-01-29T10:18:55.722982Z"
     }
    },
    "outputs": [],
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "874b6dee",
+   "id": "113f06c7",
    "metadata": {},
    "source": [
     "To run a time-domain simulation, we  pass the modified Hamiltonian dictionary directly, as demonstrated in the first section"
@@ -457,13 +457,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "709c2b18",
+   "id": "19cfec0e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-28T18:53:59.595601Z",
-     "iopub.status.busy": "2025-01-28T18:53:59.595150Z",
-     "iopub.status.idle": "2025-01-28T18:54:02.243391Z",
-     "shell.execute_reply": "2025-01-28T18:54:02.242791Z"
+     "iopub.execute_input": "2025-01-29T10:18:55.725312Z",
+     "iopub.status.busy": "2025-01-29T10:18:55.725106Z",
+     "iopub.status.idle": "2025-01-29T10:18:58.302634Z",
+     "shell.execute_reply": "2025-01-29T10:18:58.302086Z"
     }
    },
    "outputs": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6e2df4db",
+   "id": "468d151c",
    "metadata": {},
    "source": [
     "## Modelling Dissipators"
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2cb3e1fa",
+   "id": "fecb815e",
    "metadata": {},
    "source": [
     "Dissipators are modelled as functions with the same signature as terms in the Hamiltonian, i.e. to model a custom dissipator"
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d1caf70",
+   "id": "03b4fb07",
    "metadata": {},
    "source": [
     "1. Define a function `diss : time, density_matrix, args -> jax.Array`\n",
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1bea6f34",
+   "id": "bc00f29a",
    "metadata": {},
    "source": [
     "You can also get defaults"
@@ -542,13 +542,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "b00ad242",
+   "id": "99fb8872",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-28T18:54:02.245604Z",
-     "iopub.status.busy": "2025-01-28T18:54:02.245227Z",
-     "iopub.status.idle": "2025-01-28T18:54:02.249011Z",
-     "shell.execute_reply": "2025-01-28T18:54:02.248277Z"
+     "iopub.execute_input": "2025-01-29T10:18:58.304752Z",
+     "iopub.status.busy": "2025-01-29T10:18:58.304264Z",
+     "iopub.status.idle": "2025-01-29T10:18:58.307849Z",
+     "shell.execute_reply": "2025-01-29T10:18:58.307316Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -558,7 +558,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f87f58d6ac0>}\n"
+      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f3c386c6b60>}\n"
      ]
     }
    ],
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c94261d",
+   "id": "a12a4b61",
    "metadata": {},
    "source": [
     "NOTE: To pass the dissipator above to the `master_equation` method, you have to specify the relaxation rate again. "
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "224fd145",
+   "id": "3c6ad470",
    "metadata": {},
    "source": [
     "## Postprocesses"
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03bd5eed",
+   "id": "bcdd7e87",
    "metadata": {},
    "source": [
     "You can define custom postprocesses. These are functions with the signature `postprocess : density_matrix_batch, args -> array`. The `density_matrix_batch` is an array of shape `TxNxN`, where `T` encodes time."
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "170a508f",
+   "id": "359f7313",
    "metadata": {},
    "source": [
     "For example, if you are only interested in the occupation of the 0-th state"
@@ -602,13 +602,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "2400d2be",
+   "id": "97ad5df4",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-28T18:54:02.251153Z",
-     "iopub.status.busy": "2025-01-28T18:54:02.250579Z",
-     "iopub.status.idle": "2025-01-28T18:54:02.253726Z",
-     "shell.execute_reply": "2025-01-28T18:54:02.253115Z"
+     "iopub.execute_input": "2025-01-29T10:18:58.309674Z",
+     "iopub.status.busy": "2025-01-29T10:18:58.309334Z",
+     "iopub.status.idle": "2025-01-29T10:18:58.312329Z",
+     "shell.execute_reply": "2025-01-29T10:18:58.311724Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -622,13 +622,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "1893f6a0",
+   "id": "bd2be097",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-28T18:54:02.255732Z",
-     "iopub.status.busy": "2025-01-28T18:54:02.255387Z",
-     "iopub.status.idle": "2025-01-28T18:54:03.321102Z",
-     "shell.execute_reply": "2025-01-28T18:54:03.320596Z"
+     "iopub.execute_input": "2025-01-29T10:18:58.314054Z",
+     "iopub.status.busy": "2025-01-29T10:18:58.313711Z",
+     "iopub.status.idle": "2025-01-29T10:18:59.355116Z",
+     "shell.execute_reply": "2025-01-29T10:18:59.354606Z"
     }
    },
    "outputs": [
